--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "scripts-manager-client",
-  "version": "1.2.4",
-  "description": "轻量级脚本管理器桌面客户端",
+  "name": "scripts-manager",
+  "version": "1.3.0",
+  "description": "Scripts Manager - 轻量级脚本管理工具",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -22,7 +22,7 @@
     "desktop",
     "electron"
   ],
-  "author": "Scripts Manager",
+  "author": "Scripts Manager Team",
   "license": "MIT",
   "devDependencies": {
     "electron": "^27.0.0",
@@ -33,8 +33,8 @@
     "iconv-lite": "^0.6.3"
   },
   "build": {
-    "appId": "com.scriptsmanager.client",
-    "productName": "脚本管理器",
+    "appId": "com.scriptsmanager.app",
+    "productName": "Scripts Manager",
     "directories": {
       "output": "dist"
     },
@@ -62,14 +62,14 @@
       ]
     },
     "portable": {
-      "artifactName": "脚本管理器-${version}-portable.exe"
+      "artifactName": "ScriptsManager-${version}-portable.exe"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
-      "artifactName": "脚本管理器-${version}-setup.exe",
-      "shortcutName": "脚本管理器",
-      "uninstallDisplayName": "脚本管理器"
+      "artifactName": "ScriptsManager-${version}-setup.exe",
+      "shortcutName": "Scripts Manager",
+      "uninstallDisplayName": "Scripts Manager"
     },
     "linux": {
       "target": [
