更新多个文件，改进脚本管理和执行功能

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,12 @@ v*.md
 # Internal documentation (not for public repo)
 GITHUB_SETUP.md
 memory-bank/
+BUILD.md
+PORTABLE_FIX.md
+PORTABLE_NO_EXAMPLES.md
+macOS_compatibility_analysis.md
+
+# Analysis and development files
+*_analysis.md
+*_fix.md
+*_compatibility*.md
