--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sharp": "^0.34.2"
   },
   "dependencies": {
-    "iconv-lite": "^0.6.3"
+    "iconv-lite": "^0.6.3",
+    "electron-log": "^5.0.1"
   },
   "build": {
     "appId": "com.scriptsmanager.app",
